[package]
name = "rtiow"
version = "0.1.0"
authors = ["Ilya Barkov <32970394+luliic2@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { version = "0.15.0", features = ["rayon"] }
lodepng = "3.4.5"
rand = { version = "0.8.3", features = ["small_rng"] }
rayon = "1.5.0"
